# google-genai-proxy

./: README.md  pyproject.toml
genai_proxy/: _replay_api_client.py  client.py
google-proxy/genai/: _api_client.py
