[build-system]
requires = ["setuptools", "wheel", "twine>=6.1.0"]

[project]
name = "google-genai-proxy"
version = "1.9.0"
description = "GenAI Python SDK"
readme = "README.md"
dependencies = [
    "anyio>=4.8.0, <5.0.0",
    "google-auth>=2.14.1, <3.0.0",
    "httpx>=0.28.1, <1.0.0",
    "pydantic>=2.0.0, <3.0.0",
    "requests>=2.28.1, <3.0.0",
    "websockets>=13.0.0, <15.1.0",
    "typing-extensions>=4.11.0, <5.0.0",
]

[tool.setuptools]
packages = [
    "genai_proxy",
]
include-package-data = true